--- a/pedido.html
+++ b/pedido.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás</title>
+<title>Novo Pedido — MoskoGás v1.4</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -45,7 +45,7 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <h1>➕ Novo Pedido</h1>
+  <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v1.4</span></h1>
 
   <!-- BUSCA CLIENTE -->
   <div class="card">
@@ -178,8 +178,8 @@ async function selectCustomer(i) {
   ['searchPhone','searchName','searchAddr'].forEach(id => {
     const el = document.getElementById(id); if (el) el.value = '';
   });
-  // Se veio do Bling (tem bling_contact_id mas sem endereço), busca detalhes
-  if (c.bling_contact_id && !c.address_line) {
+  // Busca detalhes completos do Bling sempre que tiver bling_contact_id
+  if (c.bling_contact_id) {
     try {
       const det = await api(`/api/customer/bling-detail/${c.bling_contact_id}`);
       if (det && !det.error) {
