--- a/gestao.html
+++ b/gestao.html
@@ -46,15 +46,26 @@
 
 <!-- TOOLBAR -->
 <div class="toolbar">
-  <input type="date" id="fDate" onchange="load()">
-  <select id="fStatus" onchange="load()">
-    <option value="">Todos status</option>
-    <option value="novo">🔴 Novo</option>
-    <option value="encaminhado">🟡 Encaminhado</option>
-    <option value="whatsapp_enviado">🟢 WhatsApp Enviado</option>
-    <option value="entregue">🔵 Entregue</option>
-    <option value="cancelado">⚫ Cancelado</option>
-  </select>
+  <div style="display:flex;align-items:center;gap:4px">
+    <input type="date" id="fDateFrom" onchange="load()" style="width:135px">
+    <span style="color:#94a3b8;font-size:12px">até</span>
+    <input type="date" id="fDateTo" onchange="load()" style="width:135px">
+    <button id="btnHoje" class="btn" onclick="setDateFilter('hoje')" style="background:#f97316;color:#fff;padding:6px 10px;font-size:12px;white-space:nowrap">Hoje</button>
+    <button id="btnOntem" class="btn" onclick="setDateFilter('ontem')" style="background:#64748b;color:#fff;padding:6px 10px;font-size:12px;white-space:nowrap">Ontem</button>
+    <button class="btn" onclick="setDateFilter('limpar')" style="background:#e2e8f0;color:#64748b;padding:6px 8px;font-size:12px">✕</button>
+  </div>
+  <div style="position:relative">
+    <button id="statusBtn" onclick="toggleStatusMenu()" style="background:#fff;border:1px solid #e2e8f0;border-radius:8px;padding:8px 12px;cursor:pointer;font-size:13px;min-width:140px;text-align:left">
+      <span id="statusLabel">Status ▾</span>
+    </button>
+    <div id="statusMenu" style="display:none;position:absolute;top:38px;left:0;z-index:100;background:#fff;border:2px solid #f97316;border-radius:8px;padding:8px;min-width:190px;box-shadow:0 4px 12px rgba(0,0,0,.1)">
+      <label style="display:flex;align-items:center;gap:8px;padding:4px 6px;cursor:pointer;font-size:13px"><input type="checkbox" value="novo" onchange="updateStatusFilter()" checked> 🔴 Novo</label>
+      <label style="display:flex;align-items:center;gap:8px;padding:4px 6px;cursor:pointer;font-size:13px"><input type="checkbox" value="encaminhado" onchange="updateStatusFilter()" checked> 🟡 Encaminhado</label>
+      <label style="display:flex;align-items:center;gap:8px;padding:4px 6px;cursor:pointer;font-size:13px"><input type="checkbox" value="whatsapp_enviado" onchange="updateStatusFilter()" checked> 🟢 WhatsApp Enviado</label>
+      <label style="display:flex;align-items:center;gap:8px;padding:4px 6px;cursor:pointer;font-size:13px"><input type="checkbox" value="entregue" onchange="updateStatusFilter()" checked> 🔵 Entregue</label>
+      <label style="display:flex;align-items:center;gap:8px;padding:4px 6px;cursor:pointer;font-size:13px"><input type="checkbox" value="cancelado" onchange="updateStatusFilter()"> ⚫ Cancelado</label>
+    </div>
+  </div>
   <select id="fDriver" onchange="load()">
     <option value="">Todos entregadores</option>
   </select>
@@ -126,7 +137,7 @@ async function init() {
     opt.value = d.id; opt.textContent = d.name;
     sel.appendChild(opt);
   });
-  load();
+  setDateFilter('hoje');
 }
 
 // ── Load orders ───────────────────────────────────────────────
@@ -136,19 +147,89 @@ async function load() {
   loadTimer = setTimeout(_load, 150);
 }
 
+// Data em Campo Grande (UTC-4)
+function todayCG() {
+  const d = new Date();
+  d.setHours(d.getHours() - 4); // UTC-4
+  return d.toISOString().slice(0, 10);
+}
+function yesterdayCG() {
+  const d = new Date();
+  d.setHours(d.getHours() - 4 - 24);
+  return d.toISOString().slice(0, 10);
+}
+
+function setDateFilter(mode) {
+  const from = document.getElementById('fDateFrom');
+  const to   = document.getElementById('fDateTo');
+  const btnH = document.getElementById('btnHoje');
+  const btnO = document.getElementById('btnOntem');
+  if (mode === 'hoje') {
+    const t = todayCG();
+    from.value = t; to.value = t;
+    btnH.style.background = '#f97316'; btnO.style.background = '#64748b';
+  } else if (mode === 'ontem') {
+    const y = yesterdayCG();
+    from.value = y; to.value = y;
+    btnO.style.background = '#f97316'; btnH.style.background = '#64748b';
+  } else {
+    from.value = ''; to.value = '';
+    btnH.style.background = '#64748b'; btnO.style.background = '#64748b';
+  }
+  load();
+}
+
+// Status multi-select state
+let lastRows = [];
+let activeStatuses = new Set(['novo','encaminhado','whatsapp_enviado','entregue']);
+
+function toggleStatusMenu() {
+  const m = document.getElementById('statusMenu');
+  m.style.display = m.style.display === 'none' ? 'block' : 'none';
+}
+
+function updateStatusFilter() {
+  const boxes = document.querySelectorAll('#statusMenu input[type=checkbox]');
+  activeStatuses = new Set([...boxes].filter(b => b.checked).map(b => b.value));
+  const count = activeStatuses.size;
+  const lbl = count === 5 ? 'Todos status ▾' : count === 0 ? 'Nenhum ▾' : `${count} status ▾`;
+  document.getElementById('statusLabel').textContent = lbl;
+  load();
+}
+
+document.addEventListener('click', e => {
+  if (!e.target.closest('#statusMenu') && !e.target.closest('#statusBtn'))
+    document.getElementById('statusMenu').style.display = 'none';
+});
+
+// Ordenação: novo > encaminhado > whatsapp_enviado > entregue > cancelado
+const STATUS_ORDER = { novo: 0, encaminhado: 1, whatsapp_enviado: 2, entregue: 3, cancelado: 4 };
+
 async function _load() {
-  const date     = document.getElementById('fDate').value;
-  const status   = document.getElementById('fStatus').value;
+  const dateFrom = document.getElementById('fDateFrom').value;
+  const dateTo   = document.getElementById('fDateTo').value;
   const driverId = document.getElementById('fDriver').value;
   const q        = document.getElementById('fQ').value;
 
   let url = `/api/orders/list?`;
-  if (date)     url += `&date=${date}`;
-  if (status)   url += `&status=${status}`;
+  if (dateFrom) url += `&date_from=${dateFrom}`;
+  if (dateTo)   url += `&date_to=${dateTo}`;
   if (driverId) url += `&driver_id=${driverId}`;
   if (q)        url += `&q=${encodeURIComponent(q)}`;
 
-  const rows = await api(url).catch(() => []);
+  let rows = await api(url).catch(() => []);
+
+  // Filtro de status client-side (multi-select)
+  rows = rows.filter(r => activeStatuses.has(r.status));
+
+  // Ordenação: status prioritário, depois por hora (mais recente)
+  rows.sort((a, b) => {
+    const sd = STATUS_ORDER[a.status] - STATUS_ORDER[b.status];
+    if (sd !== 0) return sd;
+    return b.created_at - a.created_at;
+  });
+
+  lastRows = rows;
   renderTable(rows);
   renderSummary(rows);
   document.getElementById('count-badge').textContent = `${rows.length} pedidos`;
@@ -198,6 +279,7 @@ function renderTable(rows) {
         <div class="action-btns">
           ${canSendWa  ? `<button class="btn btn-green" style="font-size:11px;padding:5px 8px" onclick="openModal(${o.id})">📲 Msg</button>` : ''}
           ${canDeliver ? `<button class="btn btn-blue"  style="font-size:11px;padding:5px 8px" onclick="markDelivered(${o.id})">✅ Entregue</button>` : ''}
+          <button class="btn" style="font-size:11px;padding:5px 8px;background:#6366f1;color:#fff" onclick="openEditModal(${o.id})">✏️</button>
           ${canCancel  ? `<button class="btn btn-red"   style="font-size:11px;padding:5px 8px" onclick="cancelOrder(${o.id})">✕</button>` : ''}
           <button class="btn btn-gray" style="font-size:11px;padding:5px 8px" onclick="printOrder(${JSON.stringify(o).replace(/"/g,'&quot;')})">🖨️</button>
         </div>
@@ -343,7 +425,183 @@ document.getElementById('modal-wa').addEventListener('click', function(e) {
   if (e.target === this) closeModal();
 });
 
+
+// ── Editar Pedido ─────────────────────────────────────────────
+let editOrderId = null;
+let editItems = [];
+
+function openEditModal(orderId) {
+  const o = lastRows.find(r => r.id === orderId);
+  if (!o) { toast('Pedido não encontrado', 'error'); return; }
+
+  editOrderId = orderId;
+  editItems = JSON.parse(o.items_json || '[]').map(i => ({...i}));
+
+  document.getElementById('edit-order-id').textContent = `#${orderId}`;
+  document.getElementById('edit-name').value  = o.customer_name || '';
+  document.getElementById('edit-phone').value = o.phone_digits || '';
+  document.getElementById('edit-addr').value  = o.address_line || '';
+  document.getElementById('edit-bairro').value = o.bairro || '';
+  document.getElementById('edit-comp').value  = o.complemento || '';
+  document.getElementById('edit-ref').value   = o.referencia || '';
+  document.getElementById('edit-notes').value = o.notes || '';
+  document.getElementById('edit-prod-search').value = '';
+  document.getElementById('edit-prod-suggestions').style.display = 'none';
+
+  renderEditItems();
+  document.getElementById('modal-edit').style.display = 'flex';
+}
+
+function closeEditModal() {
+  document.getElementById('modal-edit').style.display = 'none';
+}
+
+function renderEditItems() {
+  const list = document.getElementById('edit-items-list');
+  if (!editItems.length) {
+    list.innerHTML = '<div style="color:#94a3b8;text-align:center;padding:8px">Nenhum item</div>';
+    document.getElementById('edit-total').textContent = 'R$ 0,00';
+    return;
+  }
+  let total = 0;
+  list.innerHTML = editItems.map((it, i) => {
+    total += (it.price||0) * (it.qty||1);
+    return `<div style="display:flex;align-items:center;gap:6px;padding:6px 0;border-bottom:1px solid #f1f5f9">
+      <span style="flex:1;font-size:13px">${it.name}</span>
+      <button onclick="editQty(${i},-1)" style="background:#e2e8f0;border:none;border-radius:4px;width:26px;height:26px;cursor:pointer;font-size:14px">−</button>
+      <span style="min-width:20px;text-align:center;font-weight:700">${it.qty}</span>
+      <button onclick="editQty(${i},1)" style="background:#e2e8f0;border:none;border-radius:4px;width:26px;height:26px;cursor:pointer;font-size:14px">+</button>
+      <span style="font-size:11px;color:#94a3b8">R$</span>
+      <input type="number" step="0.01" value="${parseFloat(it.price||0).toFixed(2)}" style="width:65px;padding:4px;border:1px solid #e2e8f0;border-radius:6px;font-weight:700;text-align:right;font-size:13px" onchange="editPrice(${i},this.value)">
+      <span style="min-width:70px;text-align:right;font-weight:700;font-size:13px">= R$ ${((it.price||0)*(it.qty||1)).toFixed(2)}</span>
+      <button onclick="editRemove(${i})" style="background:#fee2e2;border:none;border-radius:4px;width:26px;height:26px;cursor:pointer;color:#ef4444">✕</button>
+    </div>`;
+  }).join('');
+  document.getElementById('edit-total').textContent = `R$ ${total.toFixed(2)}`;
+}
+
+function editQty(i, d) {
+  editItems[i].qty = (editItems[i].qty||1) + d;
+  if (editItems[i].qty <= 0) editItems.splice(i, 1);
+  renderEditItems();
+}
+function editPrice(i, v) { editItems[i].price = parseFloat(v)||0; renderEditItems(); }
+function editRemove(i) { editItems.splice(i, 1); renderEditItems(); }
+
+let editProdTimer;
+async function searchEditProduct(q) {
+  clearTimeout(editProdTimer);
+  const box = document.getElementById('edit-prod-suggestions');
+  if (q.length < 2) { box.style.display='none'; return; }
+  editProdTimer = setTimeout(async () => {
+    const list = await api(`/api/products/search?q=${encodeURIComponent(q)}`).catch(() => []);
+    if (!list.length) { box.style.display='none'; return; }
+    box.style.display = 'block';
+    box.innerHTML = list.map((p,i) => {
+      const nome = p.name.length > 45 ? p.name.substring(0,45)+'…' : p.name;
+      return `<div class="suggestion-item" onclick="addEditProduct(${i})" style="display:flex;justify-content:space-between;align-items:center">
+        <span><strong>${nome}</strong></span>
+        <span style="color:#f97316;font-weight:700;margin-left:8px">R$ ${parseFloat(p.price||0).toFixed(2)}</span>
+      </div>`;
+    }).join('');
+    box._data = list;
+  }, 300);
+}
+
+function addEditProduct(i) {
+  const p = document.getElementById('edit-prod-suggestions')._data[i];
+  document.getElementById('edit-prod-search').value = '';
+  document.getElementById('edit-prod-suggestions').style.display = 'none';
+  const existing = editItems.find(x => String(x.id) === String(p.id));
+  if (existing) existing.qty++;
+  else editItems.push({ id: String(p.id), name: p.name, qty: 1, price: parseFloat(p.price)||0 });
+  renderEditItems();
+}
+
+async function saveEditOrder() {
+  const name  = document.getElementById('edit-name').value.trim();
+  const addr  = document.getElementById('edit-addr').value.trim();
+  if (!name) { toast('Nome obrigatório', 'error'); return; }
+  if (!addr) { toast('Endereço obrigatório', 'error'); return; }
+  if (!editItems.length) { toast('Adicione pelo menos 1 item', 'error'); return; }
+
+  const total = editItems.reduce((s,i) => s + (i.price||0)*(i.qty||1), 0);
+  const body = {
+    customer_name: name,
+    phone_digits: document.getElementById('edit-phone').value.replace(/\D/g,''),
+    address_line: addr,
+    bairro: document.getElementById('edit-bairro').value,
+    complemento: document.getElementById('edit-comp').value,
+    referencia: document.getElementById('edit-ref').value,
+    items: editItems,
+    total_value: total,
+    notes: document.getElementById('edit-notes').value,
+  };
+
+  try {
+    await api(`/api/order/${editOrderId}/update`, { method: 'POST', body: JSON.stringify(body) });
+    toast('✅ Pedido atualizado!');
+    closeEditModal();
+    load();
+  } catch(e) { toast(e.message, 'error'); }
+}
+
 init();
 </script>
+
+<!-- MODAL EDITAR PEDIDO -->
+<div class="modal-overlay" id="modal-edit" style="display:none">
+  <div class="modal" style="max-width:620px;width:95%;max-height:90vh;overflow-y:auto">
+    <h2>✏️ Editar Pedido <span id="edit-order-id" style="color:#f97316"></span></h2>
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:12px">
+      <div>
+        <label style="font-size:12px;color:#64748b;font-weight:600">CLIENTE *</label>
+        <input id="edit-name" type="text" style="width:100%">
+      </div>
+      <div>
+        <label style="font-size:12px;color:#64748b;font-weight:600">TELEFONE</label>
+        <input id="edit-phone" type="text" style="width:100%">
+      </div>
+      <div style="grid-column:1/-1">
+        <label style="font-size:12px;color:#64748b;font-weight:600">ENDEREÇO *</label>
+        <input id="edit-addr" type="text" style="width:100%">
+      </div>
+      <div>
+        <label style="font-size:12px;color:#64748b;font-weight:600">BAIRRO</label>
+        <input id="edit-bairro" type="text" style="width:100%">
+      </div>
+      <div>
+        <label style="font-size:12px;color:#64748b;font-weight:600">COMPLEMENTO</label>
+        <input id="edit-comp" type="text" style="width:100%">
+      </div>
+      <div style="grid-column:1/-1">
+        <label style="font-size:12px;color:#64748b;font-weight:600">REFERÊNCIA</label>
+        <input id="edit-ref" type="text" style="width:100%">
+      </div>
+    </div>
+
+    <label style="font-size:12px;color:#64748b;font-weight:600">ITENS</label>
+    <div style="display:flex;gap:8px;margin-bottom:8px;position:relative">
+      <input id="edit-prod-search" type="text" placeholder="🔍 Adicionar produto..." style="flex:1" oninput="searchEditProduct(this.value)">
+      <div id="edit-prod-suggestions" style="display:none;position:absolute;top:38px;left:0;right:0;z-index:50;border:2px solid #f97316;border-top:none;border-radius:0 0 8px 8px;background:#fff;max-height:200px;overflow-y:auto"></div>
+    </div>
+    <div id="edit-items-list" style="margin-bottom:12px"></div>
+    <div style="display:flex;justify-content:space-between;align-items:center;padding:10px 0;border-top:2px solid #f97316;margin-bottom:12px">
+      <span style="font-weight:700">TOTAL</span>
+      <span id="edit-total" style="font-size:20px;font-weight:900;color:#f97316">R$ 0,00</span>
+    </div>
+
+    <div>
+      <label style="font-size:12px;color:#64748b;font-weight:600">OBSERVAÇÃO</label>
+      <textarea id="edit-notes" rows="2" style="width:100%;resize:vertical"></textarea>
+    </div>
+
+    <div style="display:flex;gap:8px;margin-top:16px;justify-content:flex-end">
+      <button class="btn btn-gray" onclick="closeEditModal()">Cancelar</button>
+      <button class="btn btn-orange" onclick="saveEditOrder()">💾 Salvar Alterações</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
